Correctif, alignement des plats sur le titre de leur catégorie

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -374,6 +374,7 @@ a {
             justify-content: space-around;
             margin-top: 3em;
             flex-wrap: wrap;
+            align-items: flex-start;
         }
 
         a {
